# age-verification-longfellow-zk

./: .gitignore  CLAUDE.md  README.md  mdoc-lib.js  package-lock.json  package.json  playwright.config.js
holder/: index.html  mdoc-lib-browser.js
holder/circuits/: README.txt
issuer/: index.js  package-lock.json  package.json
issuer/test/: issuer.test.js
verifier/: longfellow.js  package-lock.json  package.json  server.js
verifier/circuits/: n1.circuit  n2.circuit  n3.circuit
verifier/longfellow-cli/: CMakeLists.txt  build-wasm.sh  build.sh  cli.cc
verifier/public/: index.html
verifier/test/: helpers.js  integration.test.js  verifier.test.js  wasm-debug.spec.mjs
